# FineMem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.json  config_node_num_1.json  config_node_num_3.json  config_node_num_4.json  config_node_num_5.json  config_node_num_6.json
include/: CMakeLists.txt  computing_node.h  cpu_cache.h  free_block_manager.h  free_tree_manager.h  kv_engine.h  legoalloc.h  memory_heap.h  memory_node.h  mr_utils.h  msg.h  rdma_conn.h  rdma_conn_manager.h  rdma_mem_pool.h  rpc_server.h
microbench/: CMakeLists.txt  attacker.cc  input_microbench.cc  microbench_class.cc  microbench_common.cc  multiple_microbench.cc  protocol_class_test.cc  protocol_cxl_shm_test.cc  protocol_exclusive_test.cc  protocol_mmap_test.cc  protocol_rpc_test.cc  protocol_share_test.cc  v_microbench.cc
microbench/traces/: trace.je.larson.16  trace.je.lean.16  trace.je.lua.16  trace.je.mstress.16  trace.je.rptest.16  trace.je.sh8bench.16  trace.je.xmalloc-test.16  trace.mi.larson.16  trace.mi.lean.16  trace.mi.lua.16  trace.mi.mstress.16  trace.mi.rptest.16  trace.mi.sh8bench.16  trace.mi.xmalloc-test.16  trace.sys.larson.16  trace.sys.lean.16  trace.sys.lua.16  trace.sys.mstress.16  trace.sys.rptest.16  trace.sys.sh8bench.16  trace.sys.xmalloc-test.16  trace.tcg.larson.16  trace.tcg.lean.16  trace.tcg.lua.16  trace.tcg.mstress.16  trace.tcg.rptest.16  trace.tcg.sh8bench.16  trace.tcg.xmalloc-test.16
scripts/: batch_build_fusee.sh  build_fusee.sh  collect_bench.sh  compile_code.sh  draw_boxline.py  draw_kv.py  env_buildup_all.sh  env_setup.sh  env_setup_r6525.sh  env_setup_xl170.sh  env_setup_xl170_batch.sh  filter.py  fresh_all.sh  fusee_bench.sh  fusee_start_server.sh  git_pull.sh  install_ofed.sh  open_vf.sh  run_bench.sh  run_different_allocator.sh  run_different_node.sh  run_different_size_128.sh  run_different_size_16.sh  run_different_thread.sh  run_exp1.sh  run_fusee_2MB.sh  run_fusee_4KB.sh  run_mix.sh  set_mac.sh  start_exp_variant_size.sh  start_microbench.sh  start_microbench_multiple.sh  start_microbench_trace.sh  start_mix.sh  start_remote_client.sh  start_server.sh  start_server_multiple.sh  stop_local_client.sh  stop_remote_client.sh  stop_server.sh  (+2 more)
scripts/microbench/: run_different_size_16.sh  size_alloc.py  start_microbench_multiple.sh  start_remote_client_multiple.sh  stop_local_client.sh
source/: CMakeLists.txt  client.cc  computing_node.cc  free_block_manager.cc  free_tree_manager.cc  local_engine.cc  local_heap.cc  memory_node.cc  mr_utils.cc  rdma_conn.cc  rdma_conn_manager.cc  rdma_mem_pool.cc  remote_engine.cc  remote_heap.cc  server.cc  user_code.cc
